// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValueButton renders 1`] = `
<button
  className="css-1uxa59e css-1efi2jj css-1c4ilrr"
  onClick={[Function]}
  value="1"
>
  1
</button>
`;

exports[`ValueButton renders expanded button 1`] = `
<button
  className="css-1uxa59e css-1efi2jj css-1c4ilrr css-1x9fsos"
  onClick={[Function]}
  value="1"
>
  1
</button>
`;
